navbar and cover photo done

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
-.App {
-  text-align: center;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 .App-logo {
   height: 40vmin;
@@ -32,6 +33,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
