transaction process done

--- a/src/Home/Banner/Banner.css
+++ b/src/Home/Banner/Banner.css
@@ -1,6 +1,7 @@
 .background-img {
-    background: linear-gradient(rgba(44, 8, 8, 0.5), rgba(3, 3, 115, 0.4)), url(../../Images/cover.jpg);
+    background: linear-gradient(rgba(44, 8, 8, 0.5), rgba(3, 3, 115, 0.4)), url(../../Images/cover.jpeg);
     background-size: cover;
     height: 80vh;
     background-position: center;
+    overflow: hidden;
 }
